	- fixed sending of vars into archive thru the App node
	- Titanium/USB dumper is now launched remotely
	- bug #1662383: V200 replies as busy but screenshot is working anyways
	- clean-up/fixes in many tifile_is calls (some of them have been simplified,
		some others have been replaced by tifiles_file_test)
	- check tfor TI8x OS version when deleting var/app
	
- 28/09/2006, version 1.01 (1.0.3, 1.0.2, 1.0.2, 1.0.1): roms
	- as stated by Benjamin, replaced snprintf by g_snprintf which is safer
	- added CABLE_DEV support for testing purposes (visible under Linux only)
	- GIF: don't ask when built in _CONSOLE mode
	- doesn't reopen DirectLink when using UsbKernel access
	- don't reopen cable in tilp_ticalcs_isready because the Titanium with USB
	  doesn't like this under Linux.
	- removed non-working leftovers from old Cocoa port, made OS X work like Linux instead (kevin)
	- fixed locale directory (kevin)
	- fixed memory leaks in config file handling (kevin)
	- fixed Manpage.txt file name for non-Win32 and MinGW (kevin)
	- fixed COPYING and RELEASE file names for MinGW (kevin)
	- fixed about dialog not closing when Close is clicked with GTK+ 2.10 (kevin)
	- remap USB hand-helds from/to config file and from command line (bug)
	- renamed executable tilp-2 into tilp
	- renamed manpage accordingly (kevin)
		=> released on 10/11/2006.

- 17/09/2006, tagged as version 1.00 (1.0.0, 1.0.0, 1.0.0, 1.0.0): roms
		=> released on 20/09/2006.
	
- 28/08/2006, version 0.24 (0.1.4, 0.2.7, 0.2.8, 0.0.6): roms
	- added grouping/ungrouping of TiGroup file in the clist popup menu
	- tested & validated previous item
	- revert addition of -H switch to firefox call, FC5's Firefox has no such switch
	  TiLP shouldn't been invoked through sudo anyway, if it is in Ubuntu, that's a packaging bug (kevin)
	- fixed bug with file selection (files was selected but never removed from selection)
	- removed local/full path option
	- fixed DnD to target folder