@@ -23,8 +23,6 @@ To do:
 
 8) don't allow to send a TI73 TiGroup file on a TI89 for instance (need to write this in tifiles)
 
-9) detect hand-held model and raises a warning if this does not match current setting
-
 //------
 
 + = done.
