@@ -12,6 +12,7 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 	- clean-up/fixes in many tifile_is calls (some of them have been simplified,
 		some others have been replaced by tifiles_file_test)
 	- check tfor TI8x OS version when deleting var/app
+	- check that hand-held specified in device box match those detected at ready check
 	
 - 28/09/2006, version 1.01 (1.0.3, 1.0.2, 1.0.2, 1.0.1): roms
 	- as stated by Benjamin, replaced snprintf by g_snprintf which is safer
